# PInkKuzuchi

./: .gitignore  CMakeLists.txt  main.c  main.h
src/: Ball.h  Block.h  Global.h  Player.h
